# hstp

./: .gitignore  Dockerfile  LICENSE  Readme.md  Specification.md  docker-compose.yml  download_tool.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  test.yml
audioboom/: __init__.py  channel.py  utils.py
audioboom/downloader/: __main__.py
docker/: build.crontab  cron_script.sh  inotify_script.sh
hstp/: __init__.py  __main__.py  episode.py  info.py  podcast.py  reader.py  utils.py
hstp/audioboom/: channel.py  structures.py
hstp/audioboom/downloader/: __main__.py
src/audioboom/: structures.py  utils.py
src/audioboom/downloader/: __main__.py
src/hstp/: __init__.py  __main__.py  podcast.py  utils.py
src/hstp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  episode.py  podcast.py
